# revue

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/plans/: 2026-03-07-revue-v1-design.md  2026-03-07-revue-v1-implementation.md
src/: app.rs  diff.rs  git.rs  main.rs  review.rs  ui.rs
src/ui/: comment_card.rs  commit_list.rs  diff.rs  file_list.rs  mod.rs  status_bar.rs
tests/: git_test.rs
