[package]
name = "revue"
version = "0.1.0"
edition = "2021"
description = "Mouse-heavy TUI code review sidecar for AI coding agents"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
arboard = "3"
syntect = "5"
anyhow = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dev-dependencies]
pretty_assertions = "1"
